--- a/webpack/package.json
+++ b/webpack/package.json
@@ -26,5 +26,9 @@
     "sass-loader": "^13.0.2",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.2.3"
   }
 }
